--- a/The_Brothers/css/HomeAllCards.css
+++ b/The_Brothers/css/HomeAllCards.css
@@ -25,14 +25,23 @@
     font-size: 15px;
     font-weight: 500;
     color: orange;
+    margin-top: 5px;
 }
 .one_pice ul li{
     list-style-type: none;
-    color:  rgb(95, 95, 95);
+    color: #000;
     font-size: 18px;
 }
+.one_pice ul li .rupe{
+    color:  rgb(169, 169, 169);
 
-
+}
+.one_pice ul .rsOffers{
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    margin-top: 0px;
+}
 
 
 
