--- a/The_Brothers/css/AddUser.css
+++ b/The_Brothers/css/AddUser.css
@@ -1,7 +1,7 @@
 
 /* General Layout */
 .AddformAlldata {
-    width: 100%;
+    /* width: 100%;
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
@@ -9,7 +9,25 @@
     border-radius: 8px;
     background-color: #f9f9f9;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif; */
+    background-color: #8d605d;
+    margin: 0px 0px 0px 0px; 
+    overflow: hidden;
+  
+  }
+  .AddformAlldata .SinAndLogImgContent{
+    padding: 40px 40px;
+  }
+  .AddformAlldata .SinAndLogImgContent h1{
+    color: #fff;
+    font-weight: 700;
+  }
+  .AddformAlldata .SinAndLogImgContent p{
+    color: #fff;
+    font-weight: 500;
+  }
+  .AddformAlldata .SinAndLogImgContent img{
+    width: 100%;
   }
   
   /* Form Heading */
@@ -21,17 +39,26 @@
     font-weight: 600;
   }
   
+  .AddformAlldata form{
+    background-color: #f9f9f9;
+    padding: 40px;
+    box-shadow: 0px 0px 5px #8d605d;
+    text-align: center;
+  }
+
   /* Form Group */
   .form-group {
     margin-bottom: 15px;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+     */
+    
   }
   
   /* Input Fields */
   .form-group input {
-    width: 100%;
+    width: 70%;
     padding: 8px 10px;
     font-size: 14px;
     border: 1px solid #ccc;
@@ -50,7 +77,7 @@
     font-size: 14px;
     font-weight: bold;
     margin-bottom: 5px;
-    color: #555;
+    color: #8d605d;
   }
   
   /* Error Messages */
@@ -62,21 +89,43 @@
   
   /* Checkbox */
   .checkboxDiv {
+    /* display: flex;
+    align-items: center; */
+  }
+  
+  .form-group label .checkboxInput {
+    margin-right: 8px;
+    width: 20px;
+  }
+  .ProFileDiv{
     display: flex;
+    justify-content: center;
+  }
+  .ProFile{
+    width: 70%;
+    height: 100px;
+    border: dashed #8d605d;
+    display: flex;
+    justify-content: center;
     align-items: center;
   }
-  
-  .checkboxInput {
-    margin-right: 8px;
+  .ProFile .ProImgLable{
+margin: 0px;
   }
-  
+  .ProFile .ProImgLable #fileImage{
+    
+  }
+  .ProFile .ProImgLable #fileImage .css-1umw9bq-MuiSvgIcon-root{
+    
+  }
   /* Submit Button */
   .submit-button {
-    width: 100%;
+    width: 70%;
     padding: 10px 15px;
     font-size: 16px;
     color: white;
-    background-color: #4caf50;
+    /* background-color: #4caf50; */
+    background-color: #8d605d;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -85,12 +134,9 @@
   }
   
   .submit-button:hover {
-    background-color: #45a049;
+    background-color: #976f6c;
   }
   
-  .submit-button:active {
-    background-color: #3e8e41;
-  }
   
   /* Login Link */
   form a {
@@ -119,20 +165,120 @@
     border: 1px solid #ccc;
     border-radius: 8px;
   }
+
+
+
+
   
   /* Responsive Design */
-  @media screen and (max-width: 480px) {
-    .AddformAlldata {
-      padding: 15px;
-    }
-  
-    .submit-button {
-      font-size: 14px;
-      padding: 8px 12px;
-    }
-  
-    form a {
-      font-size: 12px;
-    }
+
+  @media screen and (max-width: 991px) {
+    .AddformAlldata .SinAndLogImgContent h1 {
+      font-size: 30px;
+  }
+  .AddformAlldata .SinAndLogImgContent p {
+    font-size: 14px;
+}
+  }
+
+  @media screen and (max-width: 700px) {
+    .AddformAlldata .SinAndLogImgContent {
+      padding: 40px 15px;
+  }
+  .AddformAlldata .SinAndLogImgContent p {
+    font-size: 13px;
+}
+.form-group input {
+  width: 100%;
+  padding: 5px 10px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  margin-top: 5px;
+  transition: border-color 0.3s ease;
+}
+.ProFile {
+  width: 100%;
+  height: 65px;
+}
+.form-group label {
+  font-size: 12px;
+  margin-bottom: 0px;
+}
+.submit-button {
+  width: 100%;
+  padding: 5px 15px;
+  font-size: 15px;
+}
+  }
+
+
+
+  @media screen and (max-width: 500px) {
+    .AddformAlldata .SinAndLogImgContent p {
+      font-size: 11px;
+  }
+  .AddformAlldata .SinAndLogImgContent h1 {
+    font-size: 25px;
+    margin-bottom: 13px;
+}
   }
   
+
+  @media screen and (max-width: 440px) {
+    .AddformAlldata .SinAndLogImgContent p {
+      font-size: 10px;
+  }
+  .ProFile .ProImgLable {
+    margin: 0px;
+    font-size: 10px;
+}
+.form-group label {
+  font-size: 10px;
+  margin-bottom: 0px;
+}
+.AddformAlldata .SinAndLogImgContent {
+  padding: 40px 0px 40px 10px;
+}
+.form-group input {
+  font-size: 12px;
+}
+  }
+
+  @media screen and (max-width: 440px) {
+    .form-group label {
+      font-size: 9px;
+      margin-bottom: 0px;
+    }
+    .form-group label .checkboxInput {
+      margin-right: 5px;
+      width: 12px;
+      height: 11px;
+  }
+  .AddformAlldata form {
+    padding: 40px 10px 40px 10px;
+}
+  }
+
+
+  @media screen and (max-width: 360px) {
+    .form-group input {
+      padding: 2px 10px;
+      font-size: 12px;
+    }
+    .form-group label {
+      font-size: 9px;
+  }
+  .submit-button {
+    padding: 2px 15px;
+    font-size: 13px;
+    font-weight: 500;
+}
+.AddformAlldata .SinAndLogImgContent p {
+  font-size: 9px;
+}
+.AddformAlldata .SinAndLogImgContent h1 {
+  font-size: 20px;
+  margin-bottom: 13px;
+}
+  }
