--- a/The_Brothers/css/Login.css
+++ b/The_Brothers/css/Login.css
@@ -1,12 +1,48 @@
 
 .login-container {
-    max-width: 300px;
+    /* max-width: 300px;
     padding: 20px;
     margin: 40px auto;
     border: 1px solid #ccc;
     border-radius: 0px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    text-align: center; */
+    background-color: #8d605d;
+    margin: 0px 0px 0px 0px; 
+    overflow: hidden;
+  }
+  .login-container .LogFormDiv{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 75vh;
+    background-color: #f9f9f9;
+    padding: 50px 20px 50px 50px;
+    box-shadow: 0px 0px 5px #8d605d;
+  }
+  .login-container form{
+
+    text-align: left;
+    width: 100%;
+  }
+  .login-container form .form-group{
+
+  }
+   .login-container .SinAndLogImgContent{
+    padding: 40px 20px 0px 20px;
+    height: fit-content;
+  }
+   .login-container .SinAndLogImgContent h1{
+    color: #fff;
+    font-weight: 700;
+  }
+   .login-container .SinAndLogImgContent p{
+    color: #fff;
+    font-weight: 500;
+    font-size: 14px;
+  }
+   .login-container .SinAndLogImgContent img{
+    width: 80%;
   }
   
   .login-container h1 {
@@ -15,7 +51,7 @@
   }
   
   .login-container input {
-    width: 100%;
+    width: 70%;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ddd;
@@ -24,9 +60,10 @@
   }
   
   .login-container button {
-    width: 100%;
-    background-color: #007BFF;
+    width: 70%;
+    background-color: #8d605d;
     color: white;
+    font-weight: 500;
     padding: 10px;
     font-size: 16px;
     border: none;
@@ -35,11 +72,115 @@
   }
   
   .login-container button:hover {
-    background-color: #0056b3;
+    background-color: #9a6e6b;
   }
   
   .login-container p {
     color: red;
     font-size: 14px;
+  }
+  
+
+
+  @media screen and (max-width: 767px) {
+    .login-container .SinAndLogImgContent p {
+      color: #fff;
+      font-weight: 500;
+      font-size: 12px;
+  }
+  .login-container .SinAndLogImgContent {
+    padding: 40px 0px 0px 20px;
+    height: fit-content;
+}
+.login-container input {
+  width: 90%;
+  padding: 7px;
+  border-radius: 2px;
+}
+.login-container button {
+  width: 90%;
+  padding: 5px 7px 7px 7px;
+  border-radius: 2px;
+}
+.login-container .LogFormDiv {
+  width: 100%;
+  height: 75vh;
+  padding: 50px 0px 50px 30px;
+}
+  }
+
+ 
+  @media screen and (max-width: 440px) {
+    .login-container .SinAndLogImgContent p {
+      color: #fff;
+      font-weight: 500;
+      font-size: 10px;
+  }
+  }
+  
+  
+  @media screen and (max-width: 400px) {
+    .login-container .SinAndLogImgContent p {
+      color: #fff;
+      font-weight: 500;
+      font-size: 9px;
+  }
+  .login-container .SinAndLogImgContent h1 {
+    color: #fff;
+    font-weight: 700;
+    font-size: 20px;
+}
+.login-container .LogFormDiv {
+  width: 100%;
+  height: 65vh;
+  padding: 50px 0px 50px 15px;
+}
+.login-container .SinAndLogImgContent img {
+  width: 100%;
+}
+  }
+
+
+  
+  @media screen and (max-width: 360px) {
+    .login-container input {
+      width: 90%;
+      padding: 5px;
+      border-radius: 2px;
+  }
+  .form-group label {
+    font-size: 13px;
+}
+.login-container button {
+  width: 90%;
+  padding: 5px 7px 7px 7px;
+  border-radius: 2px;
+  font-size: 14px;
+}
+.login-container .SinAndLogImgContent p {
+  color: #fff;
+  font-weight: 500;
+  font-size: 8px;
+}
+  }
+
+
+  
+  @media screen and (max-width: 330px) {
+    .login-container .SinAndLogImgContent p {
+      display: none;
+  }
+  }
+
+
+  
+  @media screen and (max-width: 480px) {
+
+  }
+
+
+  
+  @media screen and (max-width: 480px) {
+
   }
   
