--- a/The_Brothers/css/TopWear.css
+++ b/The_Brothers/css/TopWear.css
@@ -19,14 +19,14 @@
     justify-content: space-evenly;
 }
 
- .pick_up_TopWear .center_1_TopWear .NoProducts{
+.NoProducts{
     width: 100%;
     display: flex;
-    height: 55vh;
+    /* height: 55vh; */
     justify-content: center;
     align-items: center;
 }
-.pick_up_TopWear .center_1_TopWear .NoProducts img{
+.NoProducts img{
     width: 25%;
 }
 
@@ -60,7 +60,7 @@
         grid-template-columns: auto auto;
         justify-content: space-evenly;
     }
-    .pick_up_TopWear .center_1_TopWear .NoProducts img {
+    .NoProducts img {
         width: 45%;
     }
     
@@ -74,7 +74,7 @@
 
 @media screen and (max-width:576px){
 
-    .pick_up_TopWear .center_1_TopWear .NoProducts img {
+    .NoProducts img {
         width: 60%;
     }
     .pick_up_TopWear .center_1_TopWear {
