--- a/The_Brothers/css/filter.css
+++ b/The_Brothers/css/filter.css
@@ -8,6 +8,8 @@
     position: sticky;
     z-index: 2;
     top: 56px;
+    /* border-bottom: rgb(231, 231, 231) solid 1px; */
+    box-shadow: 0px 0px 2px #8d605d;
 }
 .filter .conter_2{
     display: flex;
