--- a/The_Brothers/css/AddUser.css
+++ b/The_Brothers/css/AddUser.css
@@ -1,15 +1,7 @@
 
 /* General Layout */
 .AddformAlldata {
-    /* width: 100%;
-    max-width: 400px;
-    margin: 50px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    font-family: Arial, sans-serif; */
+
     background-color: #8d605d;
     margin: 0px 0px 0px 0px; 
     overflow: hidden;
@@ -43,16 +35,13 @@
     background-color: #f9f9f9;
     padding: 40px;
     box-shadow: 0px 0px 5px #8d605d;
-    text-align: center;
+
   }
 
   /* Form Group */
   .form-group {
     margin-bottom: 15px;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-     */
+ 
     
   }
   
@@ -91,6 +80,8 @@
   .checkboxDiv {
     /* display: flex;
     align-items: center; */
+    text-align: center;
+    width: 71%;
   }
   
   .form-group label .checkboxInput {
@@ -98,24 +89,37 @@
     width: 20px;
   }
   .ProFileDiv{
-    display: flex;
-    justify-content: center;
+
   }
-  .ProFile{
-    width: 70%;
+
+  .ProFileDiv .ProFile{
+    width: 100px;
     height: 100px;
-    border: dashed #8d605d;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    border: solid 1px #b6b6b6;
+    overflow: hidden;
+    position: relative;
+    background-color: rgba(0,0,0,0.1);
   }
-  .ProFile .ProImgLable{
-margin: 0px;
+  .ProFileDiv .ProFile label{
+    margin: 0px;
+    text-align: center;
+    position: absolute;
+    bottom: 10px;
+    left: 26px;
   }
-  .ProFile .ProImgLable #fileImage{
-    
+  .ProFileDiv .ProFile label .MuiSvgIcon-root{
+    font-size: 45px;
+    color: #388e3c;
   }
-  .ProFile .ProImgLable #fileImage .css-1umw9bq-MuiSvgIcon-root{
+  .ProFileDiv .ProFile #fileImage{
+   
+  }
+  .ProFileDiv .ProFile img{
+    width: 100%;
+    object-fit: cover;
+  }
+  .ProFileDiv .ProFile .ProImgLable #fileImage .css-1umw9bq-MuiSvgIcon-root{
     
   }
   /* Submit Button */
@@ -124,7 +128,6 @@ margin: 0px;
     padding: 10px 15px;
     font-size: 16px;
     color: white;
-    /* background-color: #4caf50; */
     background-color: #8d605d;
     border: none;
     border-radius: 4px;
@@ -146,7 +149,7 @@ margin: 0px;
     color: #4caf50;
     font-size: 14px;
     text-align: center;
-    width: 100%;
+    width: 71%;
   }
   
   form a:hover {
@@ -210,6 +213,13 @@ margin: 0px;
   padding: 5px 15px;
   font-size: 15px;
 }
+.checkboxDiv {
+  text-align: center;
+  width: 100%;
+}
+form a {
+  width: 100%;
+}
   }
 
 
@@ -247,7 +257,7 @@ margin: 0px;
 
   @media screen and (max-width: 440px) {
     .form-group label {
-      font-size: 9px;
+      font-size: 10px;
       margin-bottom: 0px;
     }
     .form-group label .checkboxInput {
@@ -258,16 +268,20 @@ margin: 0px;
   .AddformAlldata form {
     padding: 40px 10px 40px 10px;
 }
+.error {
+  font-size: 10px;
+  color: #ff4d4d;
+  margin-top: 5px;
+}
   }
 
-
-  @media screen and (max-width: 360px) {
-    .form-group input {
+@media screen and (max-width: 360px) {
+.form-group input {
       padding: 2px 10px;
       font-size: 12px;
     }
-    .form-group label {
-      font-size: 9px;
+.form-group label {
+      font-size: 11px;
   }
   .submit-button {
     padding: 2px 15px;
