--- a/The_Brothers/css/Logout.css
+++ b/The_Brothers/css/Logout.css
@@ -19,7 +19,57 @@
     margin-top: 5px;
 }
 .conter_1 .LogDiv img{
-    width: 40px;
-    height: 40px;
-    border-radius: 40px;
+    width: 35px;
+    height: 35px;
+    border-radius: 35px;
+}
+
+
+@media screen and (max-width:768px){
+    .conter_1 .LogDiv .LogOutBtn {
+        border-radius: 2px;
+        width: 48px;
+        height: 20px;
+        padding: 0;
+        font-size: 12px;
+        margin-left: 5px;
+    }
+    .conter_1 .LogDiv img {
+        width: 30px;
+        height: 30px;
+        border-radius: 30px;
+    }
+    .conter_1 .LogDiv {
+        margin-top: 10px;
+        text-align: center;
+    }
+}
+
+
+
+@media screen and (max-width:576px){
+    .conter_1 .LogDiv {
+        margin-top: 6px;
+        text-align: center;
+    }
+}
+
+
+
+@media screen and (max-width:500px){
+    .conter_1 .LogDiv img {
+        width: 25px;
+        height: 25px;
+        border-radius: 25px;
+    }
+    .conter_1 .LogDiv .LogOutBtn {
+        width: 40px;
+        height: 17px;
+        font-size: 10px;
+        margin-left: 5px;
+    }
+    .conter_1 .LogDiv {
+        margin-top: 5px;
+        text-align: center;
+    }
 }
