--- a/The_Brothers/css/NotFound.css
+++ b/The_Brothers/css/NotFound.css
@@ -6,7 +6,14 @@
     font-size: 20px;
     font-weight: 500;
 }
-
+.AllProNotFound a{
+    text-decoration: none;
+    padding: 5px 10px;
+    color: #fff;
+    background-color: #8d605d;
+    font-weight: 500;
+    border-radius: 3px;
+}
 
 @media screen and (max-width:576px){
     .AllProNotFound .NotFonText{
